src/objects/SPE2_Language_KPI__c.object
<CustomObject>
    <description>Object for storing language versions of KPI</description>
    <fields>
        <fullName>Alternate_Language_Corrective_Action_Ins__c</fullName>
        <label>Alternate Language Corrective Action Ins</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Language_Description__c</fullName>
        <label>Alternate Language Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Language_Preventive_Action_Ins__c</fullName>
        <label>Alternate Language Preventive Action Ins</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Language_RCA_Instructions__c</fullName>
        <label>Alternate Language RCA Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>English_Language_Corrective_Action_Ins__c</fullName>
        <label>English Language Corrective Action Ins</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>English_Language_Description__c</fullName>
        <label>English Language Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>English_Language_Preventive_Action_Ins__c</fullName>
        <label>English Language Preventive Action Ins</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>English_Language_RCA_Instructions__c</fullName>
        <label>English Language RCA Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>English_Version__c</fullName>
        <label>English Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Alternate KPI Languages</relationshipLabel>
        <relationshipName>SPE2_Language_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_Version__c</fullName>
        <encrypted>true</encrypted>
        <label>Alternate Language KPI Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Alternate Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Alternate KPI Language</label>
    <nameField>
        <displayFormat>Lang-KPI-{0000}</displayFormat>
        <label>Alternate KPI Language ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate KPI Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>